--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       
         <div class="overlay">
             <h1 class="heading"> How to Find Cheap Amtrak Tickets</h1>
-           <a href="your-link-here"  style="text-decoration: none;" class="button">Book Now</a>
+           <a href="https://ww0.us?aHR0cHM6Ly9hbXRyYWt0aWNrZXRzLmdpdGh1Yi5pbw=="  style="text-decoration: none;" class="button">Book Now</a>
 
         </div>
     </div>
